Day 4 couple fixes using border-box

--- a/coffee-shop-exercise/day-04/CoffeeShop/pages/menu.html
+++ b/coffee-shop-exercise/day-04/CoffeeShop/pages/menu.html
@@ -11,13 +11,9 @@
 
 <body>
     <header>
-        <nav id="testing">
-            <a href="../index.html"><img id="bannerLogo" src="../assets/logobeans.png"></a>
-            <h2 id="testing2">nitro</h2>
-            <ul>
-                <li><a href="../index.html">ABOUT</a></li>
-                <li><a href="./menu.html">MENU</a></li>
-                <li><a href="./menu.html">SHOP NOW</a></li>
+        <nav id="navigation-top">
+            <a href="../index.html"><img id="bannerLogo" src="../assets/logobeans.png"></a><h2 id="headingtwo-nitro" class="inline-block">nitro</h2><ul class="inline-block">
+                <li class="style-inline-block inline-block"><a class="navMenu" href="../index.html">ABOUT</a></li><li class="style-inline-block inline-block"><a class="navMenu" href="./menu.html">MENU</a></li><li class="style-inline-block inline-block"><a id="navBlue"class="navMenu" href="./menu.html">SHOP NOW</a></li>
             </ul>
         </nav>
         <div>
@@ -26,9 +22,9 @@
             </div>
             <nav id="subNavigation">
                 <ul id="listSubMenu">
-                    <li ><a class="removeAnchorUnderline" href="">Hot Drinks</a></li>
-                    <li ><a class="removeAnchorUnderline" href="">Cold Drinks</a></li>
-                    <li ><a class="removeAnchorUnderline" href="">Pastries</a></li>
+                    <li class="style-inline-block-2 inline-block" ><a class="removeAnchorUnderline" href="">Hot Drinks</a>
+                    <li class="style-inline-block-2 inline-block" ><a class="removeAnchorUnderline" href="">Cold Drinks</a>
+                    <li class="style-inline-block-2 inline-block" ><a class="removeAnchorUnderline" href="">Pastries</a>
                 </ul>
             </nav>
         </div>
