--- a/coffee-shop-exercise/day-05/CoffeeShop/pages/menu.html
+++ b/coffee-shop-exercise/day-05/CoffeeShop/pages/menu.html
@@ -11,94 +11,90 @@
 
 <body>
     <header>
-        <nav id="testing">
-            <a href="../index.html"><img id="bannerLogo" src="../assets/logobeans.png"></a>
-            <h2 id="testing2">nitro</h2>
-            <ul>
-                <li><a href="../index.html">ABOUT</a></li>
-                <li><a href="./menu.html">MENU</a></li>
-                <li><a href="./menu.html">SHOP NOW</a></li>
+        <nav id="navigation-top">
+            <a href="../index.html"><img class="logo" src="../assets/logobeans.png"></a><h2 id="headingtwo-nitro" class="inline-block">nitro</h2><ul class="inline-block list-padding">
+                <li class="style-inline-block inline-block"><a class="navMenu" href="../index.html">ABOUT</a></li><li class="style-inline-block inline-block"><a class="navMenu" href="./menu.html">MENU</a></li><li class="style-inline-block inline-block"><a id="nav-blue"class="navMenu" href="./menu.html">SHOP NOW</a></li>
             </ul>
         </nav>
         <div>
-            <div id="imageMenu">
+            <div id="image-nav">
                 <h1 id="titlePage">MENU</h1>
             </div>
             <nav id="subNavigation">
-                <ul id="listSubMenu">
-                    <li ><a class="removeAnchorUnderline" href="">Hot Drinks</a></li>
-                    <li ><a class="removeAnchorUnderline" href="">Cold Drinks</a></li>
-                    <li ><a class="removeAnchorUnderline" href="">Pastries</a></li>
+                <ul id="listSubMenu" class="list-padding">
+                    <li class="style-inline-block-2 inline-block" ><a class="removeAnchorUnderline" href="">Hot Drinks</a>
+                    <li class="style-inline-block-2 inline-block" ><a class="removeAnchorUnderline" href="">Cold Drinks</a>
+                    <li class="style-inline-block-2 inline-block" ><a class="removeAnchorUnderline" href="">Pastries</a>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section id="hotDrinksMenu">
-            <h2 class="sectionHeadings">Hot Drinks</h2>
+        <section class="menu">
+            <h2 class="menu__section-headings">Hot Drinks</h2>
             <div>
-                <h3>In-house Brew</h3>
+                <h3 class="menu__sub-headings">In-house Brew</h3>
 
-                <p class="drinkInformation">Our in-house medium roast is a classic balance between sweet vanilla, nutty
+                <p class="menu__drink-information">Our in-house medium roast is a classic balance between sweet vanilla, nutty
                     hazelnut, and a smooth
                     low
                     acidity to bring everything together.
                 </p>
-                <p class="cost">$2.99</p>
+                <p class="menu__drink-information--cost">$2.99</p>
             </div>
             <div>
-                <h3>Espresso</h3>
+                <h3 class="menu__sub-headings">Espresso</h3>
 
-                <p class="drinkInformation">A balance between bold and smooth, powerful and sweet, our signature
+                <p class="menu__drink-information">A balance between bold and smooth, powerful and sweet, our signature
                     espresso blend is a complex
                     flavor
                     profile. It features strong notes of semi-sweet chocolate and caramel, with mild acidity and a
                     bright
                     floral finish.
                 </p>
-                <p class="cost">$4.99</p>
+                <p class="menu__drink-information--cost">$4.99</p>
             </div>
         </section>
-        <section id="coldDrinksMenu">
-            <h2 class="sectionHeadings">Cold Drinks</h2>
+        <section class="menu--light-blue">
+            <h2 class="menu__section-headings">Cold Drinks</h2>
             <div>
-                <h3>Cold Brew</h3>
+                <h3 class="menu__sub-headings">Cold Brew</h3>
 
-                <p class="drinkInformation">Our bright and delicious coffee blend, brewed over ice to give you a cold
+                <p class="menu__drink-information">Our bright and delicious coffee blend, brewed over ice to give you a cold
                     coffee freshness
                     with all the flavor of our amazing in-house coffee.
                 </p>
-                <p class="cost">$3.99</p>
+                <p class="menu__drink-information--cost">$3.99</p>
             </div>
             <div>
-                <h3>Iced Chai Latte</h3>
+                <h3 class="menu__sub-headings">Iced Chai Latte</h3>
 
-                <p class="drinkInformation">A creamy drink with a kick, this drink features spicy chai tea blended with
+                <p class="menu__drink-information">A creamy drink with a kick, this drink features spicy chai tea blended with
                     your choice of
                     milk and poured over ice.
                 </p>
-                <p class="cost">$6.99</p>
+                <p class="menu__drink-information--cost">$6.99</p>
             </div>
         </section>
 
-        <section id="pastriesMenu">
-            <h2 class="sectionHeadings">Pastries</h2>
+        <section class="menu">
+            <h2 class="menu__section-headings">Pastries</h2>
             <div>
-                <h3>Bacon Oatmeal Raisin Cookie</h3>
+                <h3 class="menu__sub-headings">Bacon Oatmeal Raisin Cookie</h3>
 
-                <p class="drinkInformation">An infused bacon, sugar and egg mixture is folded into a perfect blend of
+                <p class="menu__drink-information">An infused bacon, sugar and egg mixture is folded into a perfect blend of
                     oats, flour, raisins
                     and cinnamon to create a soft and chewy textured cookie.
                 </p>
-                <p class="cost">$3.50</p>
+                <p class="menu__drink-information--cost">$3.50</p>
             </div>
             <div>
-                <h3>Blueberry, Lemon and Thyme Muffin</h3>
+                <h3 class="menu__sub-headings">Blueberry, Lemon and Thyme Muffin</h3>
 
-                <p class="drinkInformation">Tart and sweet, this classic blueberry and lemon combination comes with an
+                <p class="menu__drink-information">Tart and sweet, this classic blueberry and lemon combination comes with an
                     earthy twist.
                 </p>
-                <p class="cost">$2.50</p>
+                <p class="menu__drink-information--cost">$2.50</p>
             </div>
         </section>
 
