Day 5 vertical-align fix

--- a/coffee-shop-exercise/day-05/CoffeeShop/index.html
+++ b/coffee-shop-exercise/day-05/CoffeeShop/index.html
@@ -19,7 +19,7 @@
                 <li class="section__inline-block section__nav-list--box"><a class="section__nav-list" id="section__nav-list--blue"href="./pages/menu.html">SHOP NOW</a>
             </ul>
         </nav>
-        <div class="section__inline-block">
+        <div class="section__inline-block section__text-box">
             <h1 class="section__sitename">Nitro Coffee</h1>
             <p class="section__text--aligned">Coffee is a brewed drink prepared from roasted coffee beans, the seeds of berries from certain Coffea species.</p>
             <div class="section__button--aligned"><a href="./pages/menu.html"><button class="section__button">SHOP NOW</button></a></div>
