day 6 last edit for menu

--- a/coffee-shop-exercise/day-06/CoffeeShop/index.html
+++ b/coffee-shop-exercise/day-06/CoffeeShop/index.html
@@ -15,23 +15,21 @@
             <a href="./index.html"><img class="icon" src="./assets/logobeans.png"></a>
             <h2 class="section__name">nitro</h2>
             <ul class="section__list-menu">
-                <li ><a class="section__nav-list"
-                        href="./index.html">ABOUT</a>
-                <li ><a class="section__nav-list"
-                        href="./pages/menu.html">MENU</a>
-                <li ><a class="section__nav-list"
-                        id="section__nav-list--blue" href="./pages/menu.html">SHOP NOW</a>
+                <li><a class="section__nav-list" href="./index.html">ABOUT</a>
+                <li><a class="section__nav-list" href="./pages/menu.html">MENU</a>
+                <li><a class="section__nav-list" id="section__nav-list--blue" href="./pages/menu.html">SHOP NOW</a>
             </ul>
         </nav>
         <div class="section__flex--normal section__flex--aligned">
-        <div>
-            <h1 class="section__sitename">Nitro Coffee</h1>
-            <p class="section__text--aligned">Coffee is a brewed drink prepared from roasted coffee beans, the seeds of
-                berries from certain Coffea species.</p>
-            <div class="section__button--aligned"><a href="./pages/menu.html"><button class="section__button">SHOP
-                        NOW</button></a>
+            <div>
+                <h1 class="section__sitename">Nitro Coffee</h1>
+                <p class="section__text--aligned">Coffee is a brewed drink prepared from roasted coffee beans, the seeds
+                    of
+                    berries from certain Coffea species.</p>
+                <div class="section__button--aligned"><a href="./pages/menu.html"><button class="section__button">SHOP
+                            NOW</button></a>
+                </div>
             </div>
-        </div>
             <img class="section__hero-image" src="./assets/coffeebeans-hero.png">
 
         </div>
@@ -40,7 +38,7 @@
     <main>
         <section class="section--gray">
             <h2 class="section__card-title">Our Products</h2>
-            <div class="section__flex">
+            <div class="section__flex--center">
                 <div class="card">
                     <img class="card__image--height" src="./assets/coffeebeans.png">
                     <div class="section__flex--normal">
@@ -72,34 +70,35 @@
                     </div>
                 </div>
             </div>
-            <div class="section__flex section__flex--aligned section__button--padding"><a
+            <div class="section__flex--center section__flex--aligned section__button--padding"><a
                     href="./pages/menu.html"><button class="section__button">VIEW
                         ALL</button></a></div>
         </section>
-        <section class="section__flex--normal">
+        <section class="section__flex--normal section__flex--aligned section__spacing">
             <div>
                 <h1 class="section__sitename">We're Different</h1>
-                <p class="section__text--aligned">We grow and roast our own beans. Every bean, every cup, every steo of the way, we strive for excellence.</p>
+                <p class="section__text--aligned">We grow and roast our own beans. Every bean, every cup, every steo of
+                    the way, we strive for excellence.</p>
                 <div class="section__flex--between">
                     <img class="icon" src="./assets/planting-icon.png">
                     <img class="icon" src="./assets/2-coffee-beans-icon.png">
                     <img class="icon" src="./assets/coffee-cup-icon.png">
                 </div>
                 <div class="section__button--aligned"><a href="./pages/menu.html"><button class="section__button">LEARN
-                     MORE</button></a>
+                            MORE</button></a>
                 </div>
             </div>
-                <img class="section__hero-image" src="./assets/tiltedcan.png">
-    
+            <div class="section__back-image section__flex--center section__flex--aligned">
+                <img src="./assets/tiltedcan.png">
             </div>
-
+            
         </section>
-        <section class="section__flex section__flex--aligned">
-            <p class="section__discount--background section__flex--aligned section__flex">Get 20% off your first order
+        <section class="section__flex--center section__flex--aligned">
+            <p class="section__discount--background section__flex--aligned section__flex--center">Get 20% off your first order
                 with code: FirstNitro</p>
         </section>
     </main>
-    <footer class="section--pink section__flex">
+    <footer class="section--pink section__flex--center">
         <div class="section__footer--spacing">
             <h3 class="section__footertext--weight">Address</h3>
             <p>503 Broadway Penthouse<br> NewYork
