--- a/coffee-shop-exercise/day-06/CoffeeShop/pages/menu.html
+++ b/coffee-shop-exercise/day-06/CoffeeShop/pages/menu.html
@@ -6,25 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" type="text/css" href="../css/menu.css">
 </head>
 
 <body>
     <header>
-        <nav id="navigation-top">
-            <a href="../index.html"><img class="logo" src="../assets/logobeans.png"></a><h2 id="headingtwo-nitro" class="inline-block">nitro</h2><ul class="inline-block list-padding">
-                <li class="style-inline-block inline-block"><a class="navMenu" href="../index.html">ABOUT</a></li><li class="style-inline-block inline-block"><a class="navMenu" href="./menu.html">MENU</a></li><li class="style-inline-block inline-block"><a id="nav-blue"class="navMenu" href="./menu.html">SHOP NOW</a></li>
+        <nav class="nav-bar__inline-flex section--pink">
+            <a href="../index.html"><img class="logo" src="../assets/logobeans.png"></a>
+            <h2 class="section__name">nitro</h2>
+            <ul class="section__list-menu">
+                <li><a class="section__nav-list" href="../index.html">ABOUT</a>
+                <li><a class="section__nav-list" href="./menu.html">MENU</a>
+                <li><a class="section__nav-list" id="section__nav-list--blue" href="./menu.html">SHOP NOW</a>
             </ul>
         </nav>
         <div>
-            <div id="image-nav">
-                <h1 id="titlePage">MENU</h1>
+            <div id="image-nav" class="section__flex--center section__flex--aligned" >
+                <h1 id="titlePage" class="section__flex--center section__flex--aligned">MENU</h1>
             </div>
             <nav id="subNavigation">
-                <ul id="listSubMenu" class="list-padding">
-                    <li class="style-inline-block-2 inline-block" ><a class="removeAnchorUnderline" href="">Hot Drinks</a>
-                    <li class="style-inline-block-2 inline-block" ><a class="removeAnchorUnderline" href="">Cold Drinks</a>
-                    <li class="style-inline-block-2 inline-block" ><a class="removeAnchorUnderline" href="">Pastries</a>
+                <ul class="section__flex--center section__inherit-margin">
+                    <li class="style-inline-block-2" ><a class="section__nav-list" id="nav-white" href="">HOT DRINKS</a>
+                    <li class="style-inline-block-2" ><a class="section__nav-list" id="nav-white" href="">COLD DRINKS</a>
+                    <li class="style-inline-block-2" ><a class="section__nav-list" id="nav-white" href="">PASTRIES</a>
                 </ul>
             </nav>
         </div>
