Day 10 animations complete + fixed background img with no repeat on css vs bad html img tag

--- a/coffee-shop-exercise/day-10/CoffeeShop/index.html
+++ b/coffee-shop-exercise/day-10/CoffeeShop/index.html
@@ -32,7 +32,9 @@
                                 class="section__button">SHOP
                                 NOW</button></a>
                     </div>
-                    <div class="section__button--aligned section__nothing-box">
+                    <div class="section__button--aligned"><a href="./pages/menu.html">
+                            <div class="section__nothing-box section__button-press"></div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -79,7 +81,10 @@
             <div class="section__flex--center section__button--padding">
                 <div><a href="./pages/menu.html"><button class="section__button">VIEW
                             ALL</button></a></div>
-                <div class="section__nothing-box"></div>
+                <div><a href="./pages/menu.html">
+                        <div class="section__nothing-box section__button-press"></div>
+                    </a>
+                </div>
             </div>
         </section>
         <section class="section__flex--normal section__flex--aligned section__spacing">
@@ -97,13 +102,14 @@
                                 class="section__button">LEARN
                                 MORE</button></a>
                     </div>
-                    <div class="section__button--aligned section__nothing-box">
+                    <div class="section__button--aligned"><a href="./pages/menu.html"><div
+                        class="section__nothing-box section__button-press"></div></a>
                     </div>
                 </div>
             </div>
             <div>
                 <div class="section__back-image section__flex--center section__flex--aligned section__image--absolute">
-                    <img src="./assets/tiltedcan.png">
+                    <div class="section__spin-animation"></div>
                 </div>
                 <div class="section__nothing-box--image-box"></div>
             </div>
